crates/pg_syntax/tests/snapshots/postgres_regress/geometry@67.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT b.f1 - p.f1 AS translation\n   FROM BOX_TBL b, POINT_TBL p;"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    AExpr@7..18
      ColumnRef@7..11
        Ident@7..8 "b"
        Ascii46@8..9 "."
        Ident@9..11 "f1"
      Whitespace@11..12 " "
      Ascii45@12..13 "-"
      Whitespace@13..14 " "
      ColumnRef@14..18
        Ident@14..15 "p"
        Ascii46@15..16 "."
        Ident@16..18 "f1"
    Whitespace@18..19 " "
    As@19..21 "AS"
    Whitespace@21..22 " "
    Ident@22..33 "translation"
  Newline@33..34 "\n"
  Whitespace@34..37 "   "
  From@37..41 "FROM"
  Whitespace@41..42 " "
  RangeVar@42..51
    Ident@42..49 "BOX_TBL"
    Whitespace@49..50 " "
    Alias@50..51
      Ident@50..51 "b"
  Ascii44@51..52 ","
  Whitespace@52..53 " "
  RangeVar@53..65
    Ident@53..62 "POINT_TBL"
    Whitespace@62..63 " "
    Ident@63..64 "p"
    Ascii59@64..65 ";"

