crates/pg_syntax/tests/snapshots/postgres_regress/geometry@96.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT p.f1, poly.f1, p.f1 <@ poly.f1 AS contained\n   FROM POLYGON_TBL poly, POINT_TBL p;"
---
SelectStmt@0..89
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..8 "p"
      Ascii46@8..9 "."
      Ident@9..11 "f1"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..20
    ColumnRef@13..20
      Ident@13..17 "poly"
      Ascii46@17..18 "."
      Ident@18..20 "f1"
  Ascii44@20..21 ","
  Whitespace@21..22 " "
  ResTarget@22..50
    AExpr@22..37
      ColumnRef@22..26
        Ident@22..23 "p"
        Ascii46@23..24 "."
        Ident@24..26 "f1"
      Whitespace@26..27 " "
      Op@27..29 "<@"
      Whitespace@29..30 " "
      ColumnRef@30..37
        Ident@30..34 "poly"
        Ascii46@34..35 "."
        Ident@35..37 "f1"
    Whitespace@37..38 " "
    As@38..40 "AS"
    Whitespace@40..41 " "
    Ident@41..50 "contained"
  Newline@50..51 "\n"
  Whitespace@51..54 "   "
  From@54..58 "FROM"
  Whitespace@58..59 " "
  RangeVar@59..75
    Ident@59..70 "POLYGON_TBL"
    Whitespace@70..71 " "
    Alias@71..75
      Ident@71..75 "poly"
  Ascii44@75..76 ","
  Whitespace@76..77 " "
  RangeVar@77..89
    Ident@77..86 "POINT_TBL"
    Whitespace@86..87 " "
    Ident@87..88 "p"
    Ascii59@88..89 ";"

