crates/pg_syntax/tests/snapshots/postgres_regress/geometry@98.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT polygon(f1)\n   FROM BOX_TBL;"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..17
    FuncCall@7..17
      Ident@7..14 "polygon"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "f1"
  Ascii41@17..18 ")"
  Newline@18..19 "\n"
  Whitespace@19..22 "   "
  From@22..26 "FROM"
  Whitespace@26..27 " "
  RangeVar@27..34
    Ident@27..34 "BOX_TBL"
  Ascii59@34..35 ";"

