crates/pg_syntax/tests/snapshots/postgres_regress/gin@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "delete from gin_test_tbl where i @> array[2];"
---
DeleteStmt@0..45
  DeleteP@0..6 "delete"
  Whitespace@6..7 " "
  From@7..11 "from"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "gin_test_tbl"
  Whitespace@24..25 " "
  Where@25..30 "where"
  Whitespace@30..31 " "
  AExpr@31..43
    ColumnRef@31..32
      Ident@31..32 "i"
    Whitespace@32..33 " "
    Op@33..35 "@>"
    Whitespace@35..36 " "
    AArrayExpr@36..43
      Array@36..41 "array"
      Ascii91@41..42 "["
      AConst@42..43
        Iconst@42..43 "2"
  Ascii93@43..44 "]"
  Ascii59@44..45 ";"

