crates/pg_syntax/tests/snapshots/postgres_regress/gin@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from gin_test_tbl where i @> array[1, 999];"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..33
    Ident@21..33 "gin_test_tbl"
  Whitespace@33..34 " "
  Where@34..39 "where"
  Whitespace@39..40 " "
  AExpr@40..57
    ColumnRef@40..41
      Ident@40..41 "i"
    Whitespace@41..42 " "
    Op@42..44 "@>"
    Whitespace@44..45 " "
    AArrayExpr@45..57
      Array@45..50 "array"
      Ascii91@50..51 "["
      AConst@51..52
        Iconst@51..52 "1"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..57
        Iconst@54..57 "999"
  Ascii93@57..58 "]"
  Ascii59@58..59 ";"

