crates/pg_syntax/tests/snapshots/postgres_regress/gin@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) > 0 as ok from gin_test_tbl where i @> array[1];"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..25
    AExpr@7..19
      FuncCall@7..14
        Ident@7..12 "count"
        Ascii40@12..13 "("
        Ascii42@13..14 "*"
      Ascii41@14..15 ")"
      Whitespace@15..16 " "
      Ascii62@16..17 ">"
      Whitespace@17..18 " "
      AConst@18..19
        Iconst@18..19 "0"
    Whitespace@19..20 " "
    As@20..22 "as"
    Whitespace@22..23 " "
    Ident@23..25 "ok"
  Whitespace@25..26 " "
  From@26..30 "from"
  Whitespace@30..31 " "
  RangeVar@31..43
    Ident@31..43 "gin_test_tbl"
  Whitespace@43..44 " "
  Where@44..49 "where"
  Whitespace@49..50 " "
  AExpr@50..62
    ColumnRef@50..51
      Ident@50..51 "i"
    Whitespace@51..52 " "
    Op@52..54 "@>"
    Whitespace@54..55 " "
    AArrayExpr@55..62
      Array@55..60 "array"
      Ascii91@60..61 "["
      AConst@61..62
        Iconst@61..62 "1"
  Ascii93@62..63 "]"
  Ascii59@63..64 ";"

